--- a/app/views/lunch/go.html.erb
+++ b/app/views/lunch/go.html.erb
@@ -1,1 +1,7 @@
 <h1><%=@recommend.name%>にでも行きますか</h1>
+<ul>
+  <li>住所：<%= @recommend.address %></li>
+  <li>電話番号：<%= @recommend.tel %></li>
+  <li>定休日：<%= @recommend.regular_holiday %></li
+  <li>開店時間：<%= @recommend.open%> - <%= @recommend.close %></li>
+</ul>
